# pigweed

./: .bazelignore  .bazelrc  .bazelversion  .black.toml  .clang-format  .clang-tidy  .eslintrc.cjs  .eslintrc.json  .git-blame-ignore-revs  .gitattributes  .gitignore  .gn  .mypy.ini  .prettierignore  .prettierrc.cjs  .pw_ide.yaml  .pylintrc  .ruff.toml  BUILD  BUILD.bazel  BUILD.gn  BUILDCONFIG.gn  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GEMINI.md  Kconfig.zephyr  MODULE.bazel  OWNERS  PIGWEED_MODULES  PW_PLUGINS  README.md  REPO.bazel  WORKSPACE  WORKSPACE_OWNERS  activate.bat  activate.fish  activate.ps1  bootstrap.bat  bootstrap.fish  (+20 more)
docs/: BUILD.bazel  BUILD.gn  Doxyfile  OWNERS  automated_analysis.rst  bazel_compatibility.rst  build_system.rst  changelog.rst  ci_cq_intro.rst  code_of_conduct.rst  code_reviews.rst  conf.py  contributing.rst  developer_guide.md  editors.rst  embedded_cpp_guide.rst  facades.rst  faq.rst  getting_started.md  getting_started.rst  glossary.rst  index.rst  mission.rst  module_guide.rst  module_guides.rst  module_metadata.json  module_metadata_schema.json  module_structure.rst  modules.rst  os_abstraction_layers.rst  overview.rst  python_build.rst  redirects.json  run_doxygen.py  setup.md  size_optimizations.rst  style_guide.rst  targets.rst  third_party_support.rst
docs/3p/: index.rst
docs/_extensions/: kconfig.py  module_metadata.py  modules_index.py  seed_metadata.py
docs/blog/: 01-kudzu.rst  02-bazel-feature-flags.rst  03-pigweed-sdk.rst  04-fixed-point.rst  05-coroutines.rst  06-better-cpp-toolchains.rst  07-bazelcon-2024.rst  index.rst  rss.xml
docs/community/: index.rst
docs/concepts/: index.rst
docs/contributing/: build.rst  changelog.rst  index.rst  module_docs.rst
docs/doxygen/: BUILD.bazel  Doxyfile  footer.html  header.html  index.md  layout.xml  modules.h  styles.css
docs/get_started/: bazel.rst  bazel_integration.rst  first_time_setup.rst  index.rst  install_bazel.rst  linux.rst  macos.rst  upstream.rst  windows.rst  zephyr.rst
docs/infra/: bazel_lockfile.rst  ci_cq_intro.rst  github.rst  index.rst  rollers.rst
docs/layout/: layout.html  page.html
docs/os/: index.rst  zephyr.rst
docs/release_notes/: 2022_jan.rst
docs/showcases/: index.rst
docs/sphinx/: BUILD.bazel  automated_analysis.rst  bazel_compatibility.rst  build_system.rst  changelog.rst  code_reviews.rst  conf.py  embedded_cpp_guide.rst  facades.rst  faq.rst  glossary.rst  index.rst  mission.rst  module_metadata.json  module_metadata_schema.json  module_structure.rst  modules.rst  overview.rst  python_build.rst  redirects.json  size_optimizations.rst  size_report_notice  style_guide.rst  toolchain.rst
docs/style/: bazel.rst  cli.rst  commit_message.rst  cpp.rst  doxygen.rst  protobuf.rst  python.rst  rest.rst  sphinx.rst  writing.rst
docs/work_order/: compile_docs_examples.md  compile_docs_examples_trigger.md  new_feature.md  new_feature_trigger.md  test_enhancement_audit.md  test_enhancement_audit_trigger.md  work_order.md
pw_allocator/: Android.bp  BUILD  BUILD.bazel  BUILD.gn  CMakeLists.txt  OWNERS  allocator.cc  allocator.cmake  allocator.gni  allocator_as_pool.cc  allocator_as_pool_test.cc  allocator_fuzzing.cc  allocator_metric_proxy.cc  allocator_metric_proxy_test.cc  allocator_test.cc  allocator_test_harness.cc  allocator_testing.cc  api.rst  as_pmr_allocator.cc  as_pmr_allocator_test.cc  async_pool.cc  async_pool_test.cc  best_fit_block_allocator_test.cc  best_fit_test.cc  block.cc  block_allocator.cc  block_allocator_test.cc  block_allocator_testing.cc  block_test.cc  bucket.cc  bucket_allocator_test.cc  bucket_block_allocator_test.cc  buddy_allocator.cc  buddy_allocator_test.cc  buffer.cc  buffer_test.cc  bump_allocator.cc  bump_allocator_test.cc  chunk_pool.cc  chunk_pool_test.cc  (+52 more)
pw_allocator/benchmarks/: BUILD.bazel  BUILD.gn  CMakeLists.txt  benchmark.cc  benchmark_test.cc  best_fit_benchmark.cc  dual_first_fit_benchmark.cc  first_fit_benchmark.cc  last_fit_benchmark.cc  measurements.cc  measurements_test.cc  tlsf_benchmark.cc  worst_fit_benchmark.cc
pw_allocator/block/: BUILD.bazel  BUILD.gn  CMakeLists.txt  basic.cc  contiguous.cc  detailed_block_test.cc  poisonable.cc  result_test.cc  small_alignable_block_test.cc  small_block_test.cc  tiny_block_test.cc
pw_allocator/bucket/: BUILD.bazel  BUILD.gn  CMakeLists.txt  fast_sorted_test.cc  sequenced_test.cc  sorted_test.cc  unordered_test.cc
pw_allocator/examples/: BUILD.bazel  BUILD.gn  CMakeLists.txt  basic.cc  block_allocator.cc  custom_allocator.cc  custom_allocator.h  custom_allocator_perf_test.cc  custom_allocator_test.cc  custom_allocator_test_harness.h  linker_sections.cc  metrics.cc  pmr.cc  size_report.cc  spin_lock.cc
pw_allocator/pw_allocator_private/: allocator_testing.h
pw_allocator/py/: BUILD.bazel  BUILD.gn  setup.cfg  setup.py
pw_arduino_build/: BUILD  BUILD.bazel  BUILD.gn  OWNERS  arduino.gni  docs.rst  simple_printing_main_arduino.cc
pw_assert/: Android.bp  BUILD  BUILD.bazel  BUILD.gn  CMakeLists.txt  assert_backend_compile_test.c  assert_backend_compile_test.cc  assert_backend_compile_test_c.c  assert_facade_test.cc  assert_test.c  assert_test.cc  backend.gni  backends.rst  docs.rst  examples.cc  fake_backend.cc  light_test.cc
pw_assert_basic/: BUILD  BUILD.bazel  BUILD.gn  CMakeLists.txt  OWNERS  assert_basic.cc  basic_handler.cc  docs.rst
pw_assert_fuchsia/: BUILD.bazel  BUILD.gn  OWNERS  assert.cc  docs.rst
pw_assert_log/: Android.bp  BUILD  BUILD.bazel  BUILD.gn  CMakeLists.txt  assert_log.cc  docs.rst  examples.cc
pw_assert_tokenized/: BUILD.bazel  BUILD.gn  CMakeLists.txt  OWNERS  docs.rst  log_handler.cc
pw_assert_trap/: BUILD.bazel  BUILD.gn  docs.rst  trap_handler.cc  trap_handler_test.cc
pw_async/: BUILD.bazel  BUILD.gn  CMakeLists.txt  OWNERS  async.gni  backend.cmake  backend.gni  backends.rst  dispatcher_basic.cc  dispatcher_basic_test.cc  dispatcher_test.cc  docs.rst  fake_dispatcher_fixture.gni  fake_dispatcher_test.cc  fake_dispatcher_test.gni  heap_dispatcher.cc  heap_dispatcher.gni  test_dispatcher.cc
(+7903 files in other folders)
