# Copyright 2019 The Pigweed Authors
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not
# use this file except in compliance with the License. You may obtain a copy of
# the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
# License for the specific language governing permissions and limitations under
# the License.
load("@bazel_skylib//rules:copy_file.bzl", "copy_file")

licenses(["notice"])

# Needed for releasing //pw_bluetooth_sapphire/fuchsia/bt_host.
exports_files(
    ["LICENSE"],
    visibility = [":__subpackages__"],
)

exports_files(
    [
        "pigweed.json",
        "tsconfig.json",
    ],
    visibility = [":__subpackages__"],
)

# Symlink to clangd, for user convenience.
copy_file(
    name = "copy_clangd",
    src = "@llvm_toolchain//:bin/clangd",
    out = "clangd",
    allow_symlink = True,
)
