# Copyright 2019 The Pigweed Authors
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not
# use this file except in compliance with the License. You may obtain a copy of
# the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
# License for the specific language governing permissions and limitations under
# the License.
load("@bazel_skylib//rules:copy_file.bzl", "copy_file")
load("@hedron_compile_commands//:refresh_compile_commands.bzl", "refresh_compile_commands")
load("@pigweed//pw_build:compatibility.bzl", "incompatible_with_mcu")
load("@rules_python//sphinxdocs:sphinx_docs_library.bzl", "sphinx_docs_library")

licenses(["notice"])

# Needed for releasing //pw_bluetooth_sapphire/fuchsia/bt_host.
exports_files(
    ["LICENSE"],
    visibility = [":__subpackages__"],
)

exports_files(
    [
        "pigweed.json",
        "PIGWEED_MODULES",
        "tsconfig.json",
    ],
    visibility = [":__subpackages__"],
)

# Symlink to clangd, for user convenience.
copy_file(
    name = "copy_clangd",
    src = "@llvm_toolchain//:bin/clangd",
    out = "clangd",
    allow_symlink = True,
)

# The Fuchsia SDK is only supported on Linux hosts, so the target that
# generates compile commands for targets built for Fuchsia is separate from
# the more general-purpose `refresh_compile_commands` target.
refresh_compile_commands(
    name = "refresh_compile_commands_for_fuchsia_sdk",
    out_dir = ".compile_commands",
    target_compatible_with = select({
        "@platforms//os:linux": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
    target_groups = {
        "fuchsia": [
            [
                "//pw_bluetooth_sapphire/fuchsia/bt_host:test_pkg",
                "--config=fuchsia",
            ],
            [
                "//pw_bluetooth_sapphire/fuchsia/host/att:test_pkg",
                "--config=fuchsia",
            ],
            [
                "//pw_bluetooth_sapphire/fuchsia/host/common:test_pkg",
                "--config=fuchsia",
            ],
            [
                "//pw_bluetooth_sapphire/fuchsia/host/controllers:test_pkg",
                "--config=fuchsia",
            ],
            [
                "//pw_bluetooth_sapphire/fuchsia/host/fidl:test_pkg",
                "--config=fuchsia",
            ],
            [
                "//pw_bluetooth_sapphire/fuchsia/host/gap:test_pkg",
                "--config=fuchsia",
            ],
            [
                "//pw_bluetooth_sapphire/fuchsia/host/gatt:test_pkg",
                "--config=fuchsia",
            ],
            [
                "//pw_bluetooth_sapphire/fuchsia/host/hci:test_pkg",
                "--config=fuchsia",
            ],
            [
                "//pw_bluetooth_sapphire/fuchsia/host/hci-spec:test_pkg",
                "--config=fuchsia",
            ],
            [
                "//pw_bluetooth_sapphire/fuchsia/host/iso:test_pkg",
                "--config=fuchsia",
            ],
            [
                "//pw_bluetooth_sapphire/fuchsia/host/l2cap:test_pkg",
                "--config=fuchsia",
            ],
            [
                "//pw_bluetooth_sapphire/fuchsia/host/sco:test_pkg",
                "--config=fuchsia",
            ],
            [
                "//pw_bluetooth_sapphire/fuchsia/host/sdp:test_pkg",
                "--config=fuchsia",
            ],
            [
                "//pw_bluetooth_sapphire/fuchsia/host/sm:test_pkg",
                "--config=fuchsia",
            ],
            [
                "//pw_bluetooth_sapphire/fuchsia/host/socket:test_pkg",
                "--config=fuchsia",
            ],
            [
                "//pw_bluetooth_sapphire/fuchsia/host/testing:test_pkg",
                "--config=fuchsia",
            ],
            [
                "//pw_bluetooth_sapphire/fuchsia/host/transport:test_pkg",
                "--config=fuchsia",
            ],
        ],
    },
)

sphinx_docs_library(
    name = "docs",
    srcs = [
        "Kconfig.zephyr",
    ],
    target_compatible_with = incompatible_with_mcu(),
    visibility = ["//visibility:public"],
)
